--- a/EasyDiffInfo.plist
+++ b/EasyDiffInfo.plist
@@ -3,7 +3,9 @@
     ApplicationName = EasyDiff;
     ApplicationRelease = 0.4.0;
     Authors = (
+	"GNUstep Team",
 	"Pierre-Yves Rivaille",
+	"Adam Fedor",
 	"Riccardo Mottola"
     );
     Copyright = "2002-2009";
